Opened 17 years ago

Closed 17 years ago

#1374 closed bug (fixed)

leaking memory and semaphores

Reported by: jonas.kirilla Owned by: axeld
Priority: high Milestone: R1
Component: System/Kernel Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

In hrev21877, doing a

while (true); do clear; sysinfo | tail -n 5; done;

shows the semaphore and memory count rising continously.

ProcessController shows System Resources & Caches rising whereas the kernel_team's memory is stable (but fluctuating some).

Change History (3)

comment:1 by axeld, 17 years ago

Priority: normalhigh

As I've written in the commit message to hrev21862, the kernel is currently leaking address spaces. Unfortunately, fixing it the obvious way did not work out as expected (due to the team tear down code). Will have to investigate this some day :-)

comment:2 by jonas.kirilla, 17 years ago

Thanks for the explanation, Axel! It's good to know that you're on top of things. :)

On each fork two more semaphores seem to get used: one 'address space' and one 'translation map'. Forking eventually deplete resources, resulting in a panic saying the "heap overgrew itself".

comment:3 by axeld, 17 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev22130.

Note: See TracTickets for help on using tickets.