* creating (or dividing) reserved areas did not acquire a ref to an address   space - but they were released upon deletion. It's probably not really   needed, but now all reserved areas also grab a reference to their address   space. * Rearranged team tear down to be a bit more sane: the I/O context is removed   first (where semaphores/areas/ports/whatever might still be used), and the   address space is deleted last. * delete_area() can now remove its address space reference again (due to the   two changes above), and therefore fixes bug #1374. * cleaned up vm_address_space.c a bit (no functional change there, though).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22130 a95241bf-73f2-0310-859d-f6bbb57e9c96